Added background img in header

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+#header-page {
+	background-image: url("https://images.pexels.com/photos/4927238/pexels-photo-4927238.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
+	background-size: cover;
+	background-repeat: none;
+	height: 100vh;
+	
+}
 body {
 	font-family: Helvetica;
 	margin: 0;
