--- a/style.css
+++ b/style.css
@@ -3,18 +3,22 @@
 	background-size: cover;
 	background-repeat: none;
 	height: 100vh;
-	
-}
-h1 {
-	color: white;
-	height: 100vh;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;		
 	align-items: center;
+	justify-content: center;
+}
+h1, h2 {
+	color: white;
 	font-size: 5em;
 	font-family: 'Raleway', sans-serif;
 	font-weight: 100;
 	letter-spacing: 15px;
+}
+h2 {
+	font-size: 2em;
+	letter-spacing: 10px;
+	text-transform: uppercase;
 }
 body {
 	font-family: Helvetica;
