--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
 	border-radius: 5px;
 	border: 1px solid white;
 	margin-top: 50px;
+	color: white;
 }
 .enquire:hover {
 	color: #808080;
@@ -40,4 +41,14 @@ body {
 a:link {
 	color: white;
 	text-decoration: none;
+}
+
+.footer {
+	background-color: black;
+	bottom: 0;
+	padding-bottom: 2vh;
+	color: #808080;
+}
+ul {
+	list-style: none;
 }
