--- a/coffeehaus/style.css
+++ b/coffeehaus/style.css
@@ -1,4 +1,6 @@
-#header-page {
+
+
+#landing-page {
 	background-image: url("https://images.pexels.com/photos/4927238/pexels-photo-4927238.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
 	background-size: cover;
 	background-repeat: none;
