--- a/coffeehaus/style.css
+++ b/coffeehaus/style.css
@@ -1,118 +1,144 @@
+:root {
+	--med-brown: #2b1d0e;
+	--dark-brown: #181008;
+	--cream-color: #fff1d0;
+}
+
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: 'Raleway', sans-serif;
+	letter-spacing: 0.1em;
+	font-weight: 100;
+	color: var(--cream-color);
+	text-align: center;
+}
 html {
 	scroll-behavior: smooth;
 }
 
-nav {
-	background-color: black;
-	position: fixed;
-	width: 100vw;
-}
-#home {
-	display: float;
-	padding: 0.2vh 0 0.2vh 0;
-}
-
-#landing-page {
-	background-image: url("https://images.pexels.com/photos/4927238/pexels-photo-4927238.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
-	background-size: cover;
-	background-repeat: none;
-	height: 100vh;
-	display: flex;
-	flex-direction: column;		
-	align-items: center;
-	justify-content: center;
-}
-h1, h2 {
-	color: white;
-	font-size: 5em;
-	font-weight: 100;
-	letter-spacing: 15px;
+h1 {
+	font-size: 4em;
 }
 h2 {
 	font-size: 2em;
-	letter-spacing: 10px;
-	text-transform: uppercase;
 }
-body {
-	font-family: 'Raleway', sans-serif;	
-	margin: 0;
-	text-align: center;
-
+h3 {
+	padding: 15px 0;
 }
-.enquire {
-	font-size: 1em;
-	letter-spacing: 2px;
-	padding: 10px 10px;
-	border-radius: 5px;
-	border: 1px solid white;
-	margin-top: 50px;
-	color: white;
+h4 {
+	font-size: 3em;
 }
-.enquire:hover {
-	color: #808080;
-	border-color: #808080;
-}
-a:link {
-	color: white;
+a {
 	text-decoration: none;
 }
-a:visited {
-	color: white;
-}
-article {
-	background-image: url("images/blog-post.jpeg") ;
-	background-size: cover;
-	height: 91vh;
-	align-items: center;
-	justify-content: center;
-}
-#right {
-	display: flex;
-	flex-direction: column;
-	width: 70vw;
-	background-color: rgba(255, 255, 255, 0.2);
-	line-height: 3;
-	letter-spacing: 0.1em;
-	padding: 30px 20px 40px 30px;
-	border-top-left-radius: 50px;
-	border-bottom-right-radius: 50px;
-}
-#right h2 {
-	font-size: 36px;
-}
-#right h3 {
-	font-size: 30px;
-	line-height: 1.5;
-}
+a:hover {
 
-.footer {
-	background-color: black;
-	bottom: 0;
-	padding-bottom: 2vh;
-	color: #808080;
+}
+a:visited {
+	color: none;
 }
 ul {
 	list-style: none;
 }
 
-section {
-	margin-bottom: 25px;
+nav {
+	position: fixed;
+	width: 100%;
+	background-color: var(--dark-brown);
+	padding: 2vh 0;
+	z-index: 1;
+}
+button {
+	background-color: transparent;
+	border: solid 1px white;
+	border-radius: 5px;
+	padding: 10px 15px;
 }
 
-@media tablet (min-width: 768px) {
-	article { 
-			display: flex; }
-}
-#order-html {
-	background-image: url("images/form-bkg.jpeg");
+.bkg {
+	height: 100vh;
+	background-repeat: none;
 	background-size: cover;
-
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
 }
-#order-form {
-	background-color: rgba(0, 0, 0, 0.7);
-	width: 100vw;
-	height: 88vh;
-	color: #919191;
-	letter-spacing: 0.2em;
-	margin-bottom: 0;
+#landing-page {
+	background-image: url("images/landing-page.jpeg");
+	position: relative;
+	top: 9vh;
+}
+#what-we-do {
+	background-image: url("images/blog-post.jpeg");
+	background-position: center;
+}
+article {
+	margin: 50px 20px;
+	padding: 20px;
+	border: 2px solid white;
+	max-width: 768px;
+	justify-content: center;
+}
+article h4 {
+	padding-bottom: 5vh;
+}
+article h5 {
+	padding-top: 5vh;
+}
+#commitment-page {
+	display: inline-flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+	padding: 5vh 0;
+}
+#commitment-page h4, h3, p {
+	color: var(--med-brown);
+	font-weight: 200;
+}
+#commitment-page h3 {
+	font-size: 2em;
+	padding: 30px 0;
+	font-weight: 400;
+}
+.cards {
+	width: 380px;
+	height: 350px;
+	padding: 20px;
+	border: solid 2px var(--med-brown);
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+footer {
+	background-color: var(--dark-brown);
+	width: 100%;
+}
+.footer-item {
+	display: inline-block;
+}
+
+@media (min-width: 768px) {
+	#commitment-page {
+		flex-direction: row;
+		flex-wrap: wrap;
+	}
+}
+
+@media (min-width: 768px) {
+	#commitment-page {
+		display: grid;
+		grid-template: 35vh 55vh / repeat(4, 450px);
+		overflow-x: scroll;
+	}
+	#commitment-page h4 {
+		grid-column-start: 1;
+		grid-column-end: 5;
+	}
+	
 }
