modified blog post, added 2 sections

--- a/coffeehaus/style.css
+++ b/coffeehaus/style.css
@@ -17,6 +17,9 @@
 html {
 	scroll-behavior: smooth;
 }
+main {
+	top: 9vh;
+}
 
 h1 {
 	font-size: 4em;
@@ -49,6 +52,7 @@ nav {
 	background-color: var(--dark-brown);
 	padding: 2vh 0;
 	z-index: 1;
+	top: 0;
 }
 button {
 	background-color: transparent;
@@ -58,7 +62,6 @@ button {
 }
 
 .bkg {
-	height: 100vh;
 	background-repeat: none;
 	background-size: cover;
 	display: flex;
@@ -68,19 +71,46 @@ button {
 #landing-page {
 	background-image: url("images/landing-page.jpeg");
 	position: relative;
-	top: 9vh;
+
+	height: 100vh;
 }
-#what-we-do {
+#blog-head {
+	background-image: url("images/commitment.jpeg");
+	background-size: cover;
+	height: 70vh;
+	width: 100%;
+	position: relative;
+
+}
+#blog-head h4 {
+	color: var(--med-brown);
+	font-size: 2.5em;
+	width: 40%;
+	max-width: 150px;
+	text-align: left;
+	margin-top: -275px;
+	margin-left: 20px;
+	}
+#blog-para {
 	background-image: url("images/blog-post.jpeg");
 	background-position: center;
+	margin: 20px;
+	padding: 20px 30px;
+	color: var(--cream-color);
+	height: 50vh;
+	box-shadow: 2px 2px 10px var(--med-brown);
+	line-height: 2.5em;
+}
+#blog-para p {
+	color: var(--cream-color);
+}
+#blog-para h5 {
+	color: var(--cream-color);
 }
 article {
-	margin: 50px 20px;
-	padding: 20px;
-	border: 2px solid white;
-	max-width: 768px;
 	justify-content: center;
 }
+
 article h4 {
 	padding-bottom: 5vh;
 }
@@ -100,7 +130,7 @@ article h5 {
 	font-weight: 200;
 }
 #commitment-page h4 {
-	padding: 30px 0;
+	padding: 30px 10px;
 	display: block;
 	width: 100vw;
 }
@@ -142,6 +172,11 @@ li a:hover {
 		flex-direction: row;
 		flex-wrap: wrap;
 		height: 150vh;
+	}
+	#blog-head h4 {
+		align-self: start;
+		margin-top: -300px;
+		margin-left: 50px;
 	}
 }
 
