--- a/coffeehaus/style.css
+++ b/coffeehaus/style.css
@@ -57,8 +57,13 @@ nav {
 button {
 	background-color: transparent;
 	border: solid 1px white;
-	border-radius: 5px;
+	border-radius: 50px;
 	padding: 10px 15px;
+}
+#enquire {
+	width: 90px;
+	display: flex;
+	justify-content: center;
 }
 
 .bkg {
@@ -71,8 +76,8 @@ button {
 #landing-page {
 	background-image: url("images/landing-page.jpeg");
 	position: relative;
-
 	height: 100vh;
+	width: 100%;
 }
 #blog-head {
 	background-image: url("images/commitment.jpeg");
@@ -88,7 +93,7 @@ button {
 	width: 40%;
 	max-width: 150px;
 	text-align: left;
-	margin-top: -275px;
+	margin-top: -180px;
 	margin-left: 20px;
 	}
 #blog-para {
@@ -98,14 +103,16 @@ button {
 	padding: 20px 30px;
 	color: var(--cream-color);
 	height: 50vh;
-	box-shadow: 2px 2px 10px var(--med-brown);
-	line-height: 2.5em;
+	box-shadow: 1px 1px 5px var(--med-brown);
+	line-height: 1em;
 }
 #blog-para p {
 	color: var(--cream-color);
 }
 #blog-para h5 {
 	color: var(--cream-color);
+	font-size: 1em;
+	font-weight: 400;
 }
 article {
 	justify-content: center;
@@ -123,7 +130,7 @@ article h5 {
 	align-items: center;
 	justify-content: space-around;
 	padding: 5vh 0;
-	height: 260vh;
+	height: 300vh;
 }
 #commitment-page h4, h5, p {
 	color: var(--med-brown);
